org/retrieves/clevel-09SHZ00000GVgY32AL/unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aguardando contrato</fullName>
        </values>
        <values>
            <fullName>Aguardando instalação</fullName>
        </values>
        <values>
            <fullName>Análise cliente</fullName>
        </values>
        <values>
            <fullName>Análise financeira</fullName>
        </values>
        <values>
            <fullName>Aprovação comercial</fullName>
        </values>
        <values>
            <fullName>Aprovação crédito</fullName>
        </values>
        <values>
            <fullName>Contrato assinado</fullName>
        </values>
        <values>
            <fullName>Em negociação</fullName>
        </values>
        <values>
            <fullName>Fechado%2FPerdido</fullName>
        </values>
        <values>
            <fullName>Instalado</fullName>
        </values>
        <values>
            <fullName>Validação técnica</fullName>
        </values>
        <values>
            <fullName>Viabilidade e desenho da solução</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2C</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Fechado%2FGanho</fullName>
        </values>
        <values>
            <fullName>Fechado%2FPerdido</fullName>
        </values>
        <values>
            <fullName>Negociação</fullName>
        </values>
        <values>
            <fullName>Nova</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__AdSales</fullName>
        <description>AdSales Sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Sales Process</fullName>
        <description>Vlocity Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ApprovedTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termo Aprovado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovedViability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viabildiade Aprovada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArchitectureApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovado Arquitetura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttachedTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termo Anexado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttachedViability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viabilidade Anexada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renovação automática</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackofficeForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formulário backoffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaseContractFilled__c</fullName>
        <formula>AND(
				NOT(ISBLANK(TEXT(ContractStartType__c))),
				NOT(ISBLANK(TEXT(ContractStartDate__c))),
				NOT(ISBLANK(TEXT(ContractEndManual__c))),
				ContractEndManual__c &gt; 0
)</formula>
        <label>Base Preenchida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancellationDetails__c</fullName>
        <label>Descrição do cancelamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CancellationType__c</fullName>
        <label>Motivo do cancelamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desistencia cliente</fullName>
                </value>
                <value>
                    <fullName>Falta de interesse</fullName>
                </value>
                <value>
                    <fullName>Concorrência</fullName>
                </value>
                <value>
                    <fullName>Fora de cobertura</fullName>
                </value>
                <value>
                    <fullName>Falta de interação das partes</fullName>
                </value>
                <value>
                    <fullName>Preço do concorrente mais atrativo</fullName>
                </value>
                <value>
                    <fullName>Viabilidade aprovada com custo inviável (fora do target)</fullName>
                </value>
                <value>
                    <fullName>Tempo de análise de pré-vendas acima do esperado</fullName>
                </value>
                <value>
                    <fullName>Atraso na entrega</fullName>
                </value>
                <value>
                    <fullName>Contrato vigente com outro fornecedor/ renegociação futura</fullName>
                </value>
                <value>
                    <fullName>Conflito de interesse</fullName>
                </value>
                <value>
                    <fullName>Erro / teste Salesforce</fullName>
                </value>
                <value>
                    <fullName>Falta de retorno do cliente</fullName>
                </value>
                <value>
                    <fullName>Desistência</fullName>
                </value>
                <value>
                    <fullName>Pendência de infraestrutura do cliente</fullName>
                </value>
                <value>
                    <fullName>Informações incorretas na oportunidade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Time/Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time_Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doc Contrato Social</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <formula>ADDMONTHS(ContractStartDate__c, ROUND(VALUE(TEXT(ContractEndManual__c)),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data de término do contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractEndManual__c</fullName>
        <inlineHelpText>Preencher com um valor maior que zero</inlineHelpText>
        <label>Prazo do contrato (meses)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractPendencies__c</fullName>
        <label>Pendências contratuais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aguardando informações GR</fullName>
                </value>
                <value>
                    <fullName>Aguardando contrato assinado</fullName>
                </value>
                <value>
                    <fullName>Aguardando cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <label>Data prevista de fechamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartType__c</fullName>
        <label>Início do contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Após a ativação</fullName>
                    <default>true</default>
                    <label>Após a ativação</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Validade da proposta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EconomicGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grupo econômico</label>
        <referenceTo>EconomicGroup__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>OportunidadesGrupoEconomico</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpressViability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viabilidade Expressa?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinancialApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovação financeira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasContractStartDate__c</fullName>
        <formula>NOT(ISNULL(ContractStartDate__c))</formula>
        <label>Has Contract Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasContractStartType__c</fullName>
        <formula>NOT(ISPICKVAL(ContractStartType__c, &quot;&quot;))</formula>
        <label>HasContractStartType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasDeliveryTerm__c</fullName>
        <formula>AND(
    NOT(ISBLANK(ContractEndManual__c)),
				ContractEndManual__c &gt; 0
)</formula>
        <label>Has Delivery Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Em Aprovação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallmentPlan__c</fullName>
        <label>Número de parcelas</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsLastMile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last mile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Convertido?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalPersonDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doc Responsável legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkEconomicGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vincular ao grupo econômico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LossReason__c</fullName>
        <label>Motivos de perda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não quis pagar ativação da análise</fullName>
                </value>
                <value>
                    <fullName>Cliente da Base</fullName>
                </value>
                <value>
                    <fullName>Pesquisando Preço</fullName>
                </value>
                <value>
                    <fullName>Inviabilidade cidade não atendida</fullName>
                </value>
                <value>
                    <fullName>Sem rede AMIGO, inviabilidade VTAL</fullName>
                </value>
                <value>
                    <fullName>Não interagiu</fullName>
                </value>
                <value>
                    <fullName>Pendência Interna</fullName>
                </value>
                <value>
                    <fullName>Inviabilidade rua/bairro não atendidos</fullName>
                </value>
                <value>
                    <fullName>Oportunidade Duplicada</fullName>
                </value>
                <value>
                    <fullName>Preço da mensalidade</fullName>
                </value>
                <value>
                    <fullName>Cadastro errôneo</fullName>
                </value>
                <value>
                    <fullName>Permaneceu com o antigo provedor</fullName>
                </value>
                <value>
                    <fullName>Prazo adequação prédio (sem CTO interna)</fullName>
                </value>
                <value>
                    <fullName>Endereço inadimplente</fullName>
                </value>
                <value>
                    <fullName>Local sem oferta de produto</fullName>
                </value>
                <value>
                    <fullName>Não interagiu tecfriend parceiro</fullName>
                </value>
                <value>
                    <fullName>Fidelidade do contrato</fullName>
                </value>
                <value>
                    <fullName>Informações de lead incompletas/inexistente</fullName>
                </value>
                <value>
                    <fullName>Tempo de agendamento/ prazo ativação</fullName>
                </value>
                <value>
                    <fullName>VTAL - Área em construção</fullName>
                </value>
                <value>
                    <fullName>Desistiu atend. automat: envio dados/doc</fullName>
                </value>
                <value>
                    <fullName>Área impedida</fullName>
                </value>
                <value>
                    <fullName>Inviabilidade  CTOs  lotadas</fullName>
                </value>
                <value>
                    <fullName>Local afetado enchentes RS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente da Conta</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NeedFinancialApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necessita aprovação financeira?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NegotiationType__c</fullName>
        <label>Tipo negociação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Venda</fullName>
                    <default>true</default>
                    <label>Venda</label>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Troca de endereço</fullName>
                </value>
                <value>
                    <fullName>Transferência de titularidade</fullName>
                </value>
                <value>
                    <fullName>Cortesia</fullName>
                </value>
                <value>
                    <fullName>Refidelização/Renovação</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Cancelamento/Churn</fullName>
                </value>
                <value>
                    <fullName>Alterações técnicas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OperationUnit__c</fullName>
        <label>Unidade Operacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVATO PSI GO GNA</fullName>
                </value>
                <value>
                    <fullName>B2W ALT</fullName>
                </value>
                <value>
                    <fullName>B2B ALT</fullName>
                </value>
                <value>
                    <fullName>B2G ALT</fullName>
                </value>
                <value>
                    <fullName>B2B AVATO</fullName>
                </value>
                <value>
                    <fullName>B2G AVATO</fullName>
                </value>
                <value>
                    <fullName>B2W AVATO</fullName>
                </value>
                <value>
                    <fullName>B2B SEMPRE</fullName>
                </value>
                <value>
                    <fullName>B2G SEMPRE</fullName>
                </value>
                <value>
                    <fullName>B2W SEMPRE</fullName>
                </value>
                <value>
                    <fullName>B2B ALLREDE</fullName>
                </value>
                <value>
                    <fullName>B2G ALLREDE</fullName>
                </value>
                <value>
                    <fullName>B2W ALLREDE</fullName>
                </value>
                <value>
                    <fullName>B2B BLINK</fullName>
                </value>
                <value>
                    <fullName>B2G BLINK</fullName>
                </value>
                <value>
                    <fullName>B2W BLINK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <displayFormat>B2B-{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Número da oportunidade</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OverallApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovação auditoria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>Modo de cobrança</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boleto</fullName>
                    <default>true</default>
                    <label>Boleto</label>
                </value>
                <value>
                    <fullName>Cartão</fullName>
                </value>
                <value>
                    <fullName>Depósito</fullName>
                </value>
                <value>
                    <fullName>PIX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProposalDescription__c</fullName>
        <label>Observações da Proposta</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProposalSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prop. encaminhada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <label>Tipo da Oportunidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Regional</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OperationUnit__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>Centro-Oeste</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Operadoras/Data Center/OTTS</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Sudeste</fullName>
                </value>
                <value>
                    <fullName>Sul</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedContract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contrato relacionado</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>OportunidadesContratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsibleTeam__c</fullName>
        <label>Equipe responsável</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendedor/GR</fullName>
                    <default>true</default>
                    <label>Vendedor/GR</label>
                </value>
                <value>
                    <fullName>Arquitetura</fullName>
                </value>
                <value>
                    <fullName>Backoffice</fullName>
                </value>
                <value>
                    <fullName>Gerência</fullName>
                </value>
                <value>
                    <fullName>Head</fullName>
                </value>
                <value>
                    <fullName>C-Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RestartSale__c</fullName>
        <label>Retomar Venda</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SLAArchitect__c</fullName>
        <label>Início Arquitetura</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLAViabilityArch__c</fullName>
        <formula>IF(
  ISBLANK(SLAViability__c),
  &quot;&quot;,
  TEXT( FLOOR( MAX(0, (NOW() - SLAViability__c) * 86400) / 3600 ) ) &amp;
  &quot;:&quot; &amp;
  RIGHT(
    &quot;00&quot; &amp;
    TEXT( MOD( FLOOR( MAX(0, (NOW() - SLAViability__c) * 86400) / 60 ), 60 ) ),
    2
  ) &amp;
  &quot;:&quot; &amp;
  RIGHT(
    &quot;00&quot; &amp;
    TEXT( MOD( FLOOR( MAX(0, (NOW() - SLAViability__c) * 86400) ), 60 ) ),
    2
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Viabilidade arquitetura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAViability__c</fullName>
        <label>Início Viabilidade</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send4Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar para aprovação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrigin__c</fullName>
        <label>Canal de entrada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Callcenter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telefone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Temperatura da Oportunidade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <default>true</default>
                    <label>10% - Orçamento inicial</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20% - Necessidade confirmada</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50% - Proposta apresentada + data prevista</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>70% - Negociação avançada / Bem posicionado</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>90% - Aceite verbal</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100% - Ganho (Contrato assinado)</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>0% - Perdido</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TagNumberFilled__c</fullName>
        <label>Etiquetas Preenchidas?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.TagNumberFilled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ViabilityType__c</fullName>
        <label>Tipo da viabilidade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rede própria</fullName>
                </value>
                <value>
                    <fullName>Rede terceira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncJobId__c</fullName>
        <description>This stores asynchronous job Id if any jobs running on this opportunity.</description>
        <inlineHelpText>This stores asynchronous job Id if any jobs running on this opportunity.</inlineHelpText>
        <label>Async Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name for which this opportunity is locked.</description>
        <inlineHelpText>This stores the asynchronous operation name for which this opportunity is locked.</inlineHelpText>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BudgetAmount__c</fullName>
        <description>The budget amount which the customer says they cannot spend above.</description>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseOneTimeCharge__c</fullName>
        <description>Roll up of the one-time charges of the opportunity products before applying adjustments.</description>
        <label>Effective Total: Base One Time Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseRecurringCharge__c</fullName>
        <description>Roll up of the recurring charges of the opportunity products before applying adjustments.</description>
        <label>Effective Total: Base Recurring Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOpportunityTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c + ( vlocity_cmt__EffectiveRecurringTotal__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>